(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsWIP)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane
   ITree ExtLib Paco)
 (flags (:standard -output-directory ../../tests/wip)))



(subdir z_abs_min
 (rule
  (targets z_abs_min.t.exe)
  (deps ZAbsMin.vo z_abs_min.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_abs_min.t.exe z_abs_min.cpp z_abs_min.t.cpp)))
 (rule
  (alias runtest)
  (deps z_abs_min.t.exe)
  (action (run ./z_abs_min.t.exe))))

(subdir z_arith_overflow
 (rule
  (targets z_arith_overflow.t.exe)
  (deps ZArithOverflow.vo z_arith_overflow.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_arith_overflow.t.exe z_arith_overflow.cpp z_arith_overflow.t.cpp)))
 (rule
  (alias runtest)
  (deps z_arith_overflow.t.exe)
  (action (run ./z_arith_overflow.t.exe))))

(subdir z_div_min
 (rule
  (targets z_div_min.t.exe)
  (deps ZDivMin.vo z_div_min.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_div_min.t.exe z_div_min.cpp z_div_min.t.cpp)))
 (rule
  (alias runtest)
  (deps z_div_min.t.exe)
  (action (run ./z_div_min.t.exe))))

(subdir rocq_bug_3287
 (rule
  (targets rocq_bug_3287.t.exe)
  (deps RocqBug3287.vo rocq_bug_3287.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rocq_bug_3287.t.exe rocq_bug_3287.cpp rocq_bug_3287.t.cpp)))
 (rule
  (alias runtest)
  (deps rocq_bug_3287.t.exe)
  (action (run ./rocq_bug_3287.t.exe))))

(subdir deque_deep_tree_stackoverflow
 (rule
  (targets deque_deep_tree_stackoverflow.t.exe)
  (deps DequeDeepTreeStackoverflow.vo deque_deep_tree_stackoverflow.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} deque_deep_tree_stackoverflow.t.exe deque_deep_tree_stackoverflow.cpp deque_deep_tree_stackoverflow.t.cpp)))
 (rule
  (alias runtest)
  (deps deque_deep_tree_stackoverflow.t.exe)
  (action (run ./deque_deep_tree_stackoverflow.t.exe))))

(subdir deque_any_cast
 (rule
  (targets deque_any_cast.t.exe)
  (deps DequeAnyCast.vo deque_any_cast.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} deque_any_cast.t.exe deque_any_cast.cpp deque_any_cast.t.cpp)))
 (rule
  (alias runtest)
  (deps deque_any_cast.t.exe)
  (action (run ./deque_any_cast.t.exe))))

(subdir concept_param_mismatch
 (rule
  (targets concept_param_mismatch.t.exe)
  (deps ConceptParamMismatch.vo concept_param_mismatch.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} concept_param_mismatch.t.exe concept_param_mismatch.cpp concept_param_mismatch.t.cpp)))
 (rule
  (alias runtest)
  (deps concept_param_mismatch.t.exe)
  (action (run ./concept_param_mismatch.t.exe))))


(subdir sll_pair_cast_deque
 (rule
  (targets sll_pair_cast_deque.t.exe)
  (deps SllPairCastDeque.vo sll_pair_cast_deque.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} sll_pair_cast_deque.t.exe SllPairCastDeque.cpp sll_pair_cast_deque.t.cpp)))
 (rule
  (alias runtest)
  (deps sll_pair_cast_deque.t.exe)
  (action (run ./sll_pair_cast_deque.t.exe))))
