(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsWIP)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane
   ITree ExtLib Paco)
 (flags (:standard -output-directory ../../tests/wip)))



(subdir z_abs_min
 (rule
  (targets z_abs_min.t.exe)
  (deps ZAbsMin.vo z_abs_min.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_abs_min.t.exe z_abs_min.cpp z_abs_min.t.cpp)))
 (rule
  (alias runtest)
  (deps z_abs_min.t.exe)
  (action (run ./z_abs_min.t.exe))))

(subdir z_arith_overflow
 (rule
  (targets z_arith_overflow.t.exe)
  (deps ZArithOverflow.vo z_arith_overflow.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_arith_overflow.t.exe z_arith_overflow.cpp z_arith_overflow.t.cpp)))
 (rule
  (alias runtest)
  (deps z_arith_overflow.t.exe)
  (action (run ./z_arith_overflow.t.exe))))

(subdir z_div_min
 (rule
  (targets z_div_min.t.exe)
  (deps ZDivMin.vo z_div_min.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_div_min.t.exe z_div_min.cpp z_div_min.t.cpp)))
 (rule
  (alias runtest)
  (deps z_div_min.t.exe)
  (action (run ./z_div_min.t.exe))))

(subdir rocq_bug_3287
 (rule
  (targets rocq_bug_3287.t.exe)
  (deps RocqBug3287.vo rocq_bug_3287.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rocq_bug_3287.t.exe rocq_bug_3287.cpp rocq_bug_3287.t.cpp)))
 (rule
  (alias runtest)
  (deps rocq_bug_3287.t.exe)
  (action (run ./rocq_bug_3287.t.exe))))

(subdir deque_deep_tree_stackoverflow
 (rule
  (targets deque_deep_tree_stackoverflow.t.exe)
  (deps DequeDeepTreeStackoverflow.vo deque_deep_tree_stackoverflow.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} deque_deep_tree_stackoverflow.t.exe deque_deep_tree_stackoverflow.cpp deque_deep_tree_stackoverflow.t.cpp)))
 (rule
  (alias runtest)
  (deps deque_deep_tree_stackoverflow.t.exe)
  (action (run ./deque_deep_tree_stackoverflow.t.exe))))

(subdir concept_param_mismatch
 (rule
  (targets concept_param_mismatch.t.exe)
  (deps ConceptParamMismatch.vo concept_param_mismatch.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} concept_param_mismatch.t.exe concept_param_mismatch.cpp concept_param_mismatch.t.cpp)))
 (rule
  (alias runtest)
  (deps concept_param_mismatch.t.exe)
  (action (run ./concept_param_mismatch.t.exe))))

(subdir fibst_cofix_repro
 (rule
  (targets fibst_cofix_repro.t.exe)
  (deps FibstCofixRepro.vo fibst_cofix_repro.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} fibst_cofix_repro.t.exe fibst_cofix_repro.cpp fibst_cofix_repro.t.cpp)))
 (rule
  (alias runtest)
  (deps fibst_cofix_repro.t.exe)
  (action (run ./fibst_cofix_repro.t.exe))))

(subdir local_fixpoint
 (rule
  (targets local_fixpoint.t.exe)
  (deps LocalFixpoint.vo local_fixpoint.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} local_fixpoint.t.exe local_fixpoint.cpp local_fixpoint.t.cpp)))
 (rule
  (alias runtest)
  (deps local_fixpoint.t.exe)
  (action (run ./local_fixpoint.t.exe))))

(subdir type_args_extraction
 (rule
  (targets type_args_extraction.t.exe)
  (deps TypeArgsExtraction.vo type_args_extraction.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} type_args_extraction.t.exe type_args_extraction.cpp type_args_extraction.t.cpp)))
 (rule
  (alias runtest)
  (deps type_args_extraction.t.exe)
  (action (run ./type_args_extraction.t.exe))))
